# Copyright (C) 2015  Boucher, Antoni <bouanto@gmail.com>
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

cmake_minimum_required(VERSION 2.6)

project(uncbv)

set(CMAKE_CXX_FLAGS "-std=c++14 -lmcrypt")
set(CMAKE_CXX_FLAGS_DEBUG "-pedantic -Wall -Wextra -Wold-style-cast -Woverloaded-virtual -Wfloat-equal -Wwrite-strings -Wpointer-arith -Wcast-qual -Wcast-align -Wconversion -Wshadow -Weffc++ -Wredundant-decls -Wdouble-promotion -Winit-self -Wswitch-default -Wswitch-enum -Wundef -Wlogical-op -Winline -g")
set(CMAKE_CXX_FLAGS_RELEASE "-O2 -Os -s")

file(
    GLOB_RECURSE
    source_files
    src/*
)

add_executable(
    ${PROJECT_NAME}
    ${source_files}
)
